...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="job-kz-fg2">
                                <rect key="frame" x="47" y="190" width="281" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="name"/>
                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                <textInputTraits key="textInputTraits" textContentType="name"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Surname" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oZS-nZ-d9w">
                                <rect key="frame" x="47" y="249" width="281" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="surname"/>
                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                <textInputTraits key="textInputTraits" textContentType="family-name"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LfW-3e-Pm3">
                                <rect key="frame" x="47" y="308" width="281" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="email"/>
                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                <textInputTraits key="textInputTraits" textContentType="username"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hM6-5J-kAM">
                                <rect key="frame" x="47" y="367" width="281" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="registerPass"/>
                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                <textInputTraits key="textInputTraits" textContentType="new-password"/>
...
                                <rect key="frame" x="47" y="512" width="281" height="55"/>
                                <color key="backgroundColor" red="0.0" green="0.67450980390000004" blue="0.2901960784" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="register"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="55" id="hOe-A0-Y9b"/>
...
                        <outlet property="firstNameTextField" destination="job-kz-fg2" id="rXw-I5-riZ"/>
                        <outlet property="lastnameTextField" destination="oZS-nZ-d9w" id="g5K-Jy-ZLf"/>
                        <outlet property="passwordTextField" destination="hM6-5J-kAM" id="JN6-dA-P9w"/>
                        <outlet property="registerBtn" destination="HWF-Cj-OeE" id="BrI-9x-EuB"/>
                        <outlet property="usernameTextField" destination="LfW-3e-Pm3" id="fPW-9Z-OIU"/>
                    </connections>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="46C-KK-q8h">
                                <rect key="frame" x="47" y="245" width="281" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="userTextField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" textContentType="username"/>
...
                                <rect key="frame" x="47" y="378" width="281" height="55"/>
                                <color key="backgroundColor" red="0.0" green="0.67450980390000004" blue="0.2901960784" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="loginBtn"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="55" id="ZDV-6m-5ys"/>
...
